hphp/test/slow/parser/backquote-fail.php.expectf

Fatal error: syntax error, unexpected T_ECHO, expecting ',' or ';' in %s/backquote-fail.php on line 4
